# Slicer-Library

./: .gitignore  CMakeLists.txt  CMakePresets.json  LibSLM Documentation.odt  Main.cpp  MarcAPIInterface.h  Modifications_in code for slmSlicer over libslic3r.docx  README.md  index.html  slic3r.cpp  ~$difications_in code for slmSlicer over libslic3r.docx
.github/: copilot-instructions.md
marcAPI_manager/: Main.cpp  MarcAPIManager.cpp  MarcAPIManager.hpp
marc_dll/: MarcAPIInterface.def  MarcAPIInterface.h  MarcAPIInterfaceInternal.h  MarcAPIInterfaceStatic.h  MarcApIInterface.cpp
marc_src/: BuildStyleConfigManager.h  ErrorState.cpp  ErrorState.hpp  ExportMarcSlice.cpp  ExportMarcSlice.hpp  Logger.cpp  Logger.hpp  MarcAPI.cpp  MarcAPI.hpp  MarcAPIV0.cpp  MarcAPIV0.hpp  MarcFile.cpp  MarcFile.hpp  SVG.cpp  SVG.hpp  SlmPrint.cpp  SlmPrint.hpp  marcToSVG.cpp  marcToSVG.hpp  marc_build_styles.json  scanSegments.cpp  scanSegments.hpp  slmHatches.cpp  slmHatches.hpp
src/admesh/: stl_io.c
src/libslic3r/: ClipperUtils.hpp  ConfigBase.cpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.hpp  Flow.cpp  Flow.hpp  GCodeSender.cpp  GCodeSender.hpp  IO.cpp  IO.hpp  Layer.cpp  Layer.hpp  LayerRegion.cpp  LayerRegionFill.cpp  MeshOrientationOptimizer.cpp  MeshOrientationOptimizer.hpp  Model.cpp  Model.hpp  PerimeterGenerator.cpp  PerimeterGenerator.hpp  PlaceholderParser.cpp  PlaceholderParser.hpp  Print.cpp  Print.hpp  PrintConfig.cpp  PrintGCode.cpp  PrintObject.cpp  PrintRegion.cpp  SLAPrint.cpp  SLAPrint.hpp  SimplePrint.cpp  SimplePrint.hpp  SlmConfig.hpp  SlmHatch.cpp  SlmHatch.hpp  SupportMaterial.cpp  SupportMaterial.hpp  Surface.cpp  Surface.hpp  (+4 more)
src/libslic3r/Fill/: Fill.cpp  Fill.hpp  FillRectilinear.cpp  FillRectilinear.hpp  FillSLMisland.cpp  FillSLMisland.hpp
